# udemy-ml-regression

./: Dockerfile  README.md  pyproject.toml  requirements.txt
notebook/: 0_0_python.ipynb  0_1_pandas.ipynb  0_1_python.ipynb  0_2_pandas.ipynb  0_3_matplotlib.ipynb  0_3_numpy.ipynb  0_4_matplotlib.ipynb  1_1_boston_EDA.ipynb  1_1_python.ipynb  1_2_pandas.ipynb  1_3_matplotlib.ipynb  1_3_numpy.ipynb  1_4_matplotlib.ipynb  1_4_scikit-learn.ipynb  1_5_scikit-learn.ipynb  2_1_boston_EDA.ipynb  2_1_boston_LinearRegression_RM.ipynb  2_2_boston_LinearRegression.ipynb  2_3_sin_Polynomial_Regression.ipynb  2_3_sin_Polynomial_Ridge.ipynb  2_4_sin_Ridge.ipynb  2_5_boston_Lasso_Ridge.ipynb  3_1_boston_DecisionTreeRegressor_RM_max_depth=1.ipynb  3_1_boston_LinearRegression_RM.ipynb  3_2_boston_DecisionTreeRegressor_RM_max_depth=2.ipynb  3_2_boston_LinearRegression.ipynb  3_3_boston_Lasso_Ridge.ipynb  3_4_sin_Polynomial_Ridge.ipynb  4_1_boston_DecisionTreeRegressor_RM_max_depth=1.ipynb  4_1_boston_RandomForestRegressor.ipynb  4_3_boston_DecisionTreeRegressor.ipynb  5_2_boston_GradientBoostingRegressor.ipynb  6_1_boston_GradientBoostingRegressor_RM.ipynb  6_1_boston_LightGBM_RM.ipynb  6_2_boston_LightGBM.ipynb  7_2_boston_LightGBM_cross_validation.ipynb  8_1_boston_LightGBM_early_stopping.ipynb
