[tool.poetry]
name = "udemy-ml-regression"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "2.0.3"
numpy = "1.25.2"
matplotlib = "3.7.1"
seaborn = "0.13.1"
scikit-learn = "1.2.2"
graphviz = "0.20.3"
lightgbm = "4.1.0"
jupyterlab = "4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
